gccida/g3/loop_iv_add_mult_emit_before
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iv_add_mult_emit_before/src/loop.c:8163:47: error: use of undeclared identifier 'machine_mode'
v12 = expand_mult_add( v11, reg, mult, add, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/loop_iv_add_mult_emit_before/src/obj/loop.o] Error 1
